# cargo-v

./: .all-contributorsrc  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  generate-tag.yml  publish.yml
src/: cli_parser.rs  help.rs  lib.rs  main.rs  main_actions.rs  parse_cli.rs  parser.rs  questions.rs
