[package]
name = "cargo-v"
version = "1.0.1"
edition = "2021"
description = "Update the version of your package easily"
license = "MIT"
authors = ["Fernando Daciuk - @fdaciuk"]
readme = "README.md"
repository = "https://github.com/fdaciuk/cargo-v"
keywords = ["version", "cli", "semver", "semantic", "versioning"]
categories = ["command-line-interface", "config", "development-tools"]
include = ["Cargo.lock", "Cargo.toml", "README.md", "src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]